# cworks

./: .gitignore  firebase.json  front.code-workspace  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.devcontainer/: devcontainer.json  post-create.sh
app/: global.css
docs/: note.md
src/: App z80.svelte  App.svelte  AppBar.svelte  app.css  global.css
src/apps/: Debug.svelte
src/component/: AppsBar.svelte  ConsoleLogger.svelte  FullsizeTextarea.svelte  InlineConverter.svelte  LeadingIcon.svelte  OverrayableTextarea.svelte  SizedTextarea.svelte  Terminal.svelte  ThemeSwitcher.svelte
src/components/: ConsoleLogger.svelte
src/data/: introducation.ts
src/lib/: app.ts  console-utils.ts  event_emitter.ts  fs_wrapper.ts  index.ts
src/lib/BPMatcher/: index.ts  match.ts
src/lib/session/: cworks-loader.lua  handle.ts  index.ts  lualib.lua  luaprocess.ts  process.ts  raw_types.ts
src/libs/: BPMatcher.ts  Z80Parser.ts  event_emitter.ts  fs_wrapper.ts  session.ts  utils.ts
src/libs/BPMatcher/: config.ts  matcher.ts  pattern.ts  trait_define.ts
src/libs/session/: handle.ts  process.ts
src/lua/: Cargo.toml  build.sh
src/lua/.cargo/: config.toml
src/lua/pkg/: .gitignore  lua.ts
src/lua/src/: lib.rs  (+3 more)
src/routes/: +layout.svelte  +page.svelte
src/wasm/: Cargo.toml  note.md
src/wasm/wasm/: Cargo.toml
src/wasm/wasm/src/: lib.rs  main.rs  session.rs
src/wasm/wasm/src/js_process/: callback_process.rs  handle_casher.rs  mod.rs
src/wasm/wasm/src/processes/: ipc_master.rs  ipc_slave.rs  mod.rs  python_interpreter.rs
(+99 files in other folders)
