[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
wasm-bindgen = {version = "0.2.83"}
chrono = "0.4.22"
python = { path = "../python" }
kernel = { path = "../kernel" }
ghs_demangle = {git = "https://github.com/syoch/ghs_demangle"}
js-sys = "0.3.61"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
